--- a/src/Verify.MSTest.Tests/NugetTests.Run/Verify.MSTest.verified.nuspec
+++ b/src/Verify.MSTest.Tests/NugetTests.Run/Verify.MSTest.verified.nuspec
@@ -15,22 +15,46 @@
       <group targetFramework=".NETFramework4.7.2">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="MSTest.TestFramework" version="3.6.1" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
+        <dependency id="System.Memory" version="4.5.5" exclude="Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.8">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="MSTest.TestFramework" version="3.6.1" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
+        <dependency id="System.Memory" version="4.5.5" exclude="Analyzers" />
       </group>
       <group targetFramework="net6.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="MSTest.TestFramework" version="3.6.1" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net8.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="MSTest.TestFramework" version="3.6.1" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net9.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="MSTest.TestFramework" version="3.6.1" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
     </dependencies>
     <frameworkAssemblies>
