--- a/src/Verify.TUnit.Tests/NugetTests.Run/Verify.TUnit.verified.nuspec
+++ b/src/Verify.TUnit.Tests/NugetTests.Run/Verify.TUnit.verified.nuspec
@@ -14,11 +14,19 @@
     <dependencies>
       <group targetFramework="net8.0">
         <dependency id="Verify" version="version" include="All" />
-        <dependency id="TUnit.Core" version="0.1.942" exclude="Build,Analyzers" />
+        <dependency id="TUnit.Core" version="0.1.998" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net9.0">
         <dependency id="Verify" version="version" include="All" />
-        <dependency id="TUnit.Core" version="0.1.942" exclude="Build,Analyzers" />
+        <dependency id="TUnit.Core" version="0.1.998" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
     </dependencies>
   </metadata>
