--- a/src/Verify.Xunit.Tests/NugetTests.Run/Verify.Xunit.verified.nuspec
+++ b/src/Verify.Xunit.Tests/NugetTests.Run/Verify.Xunit.verified.nuspec
@@ -16,31 +16,59 @@
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
+        <dependency id="System.Memory" version="4.5.5" exclude="Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.8">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
+        <dependency id="System.Memory" version="4.5.5" exclude="Analyzers" />
       </group>
       <group targetFramework="net6.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net7.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net8.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
       <group targetFramework="net9.0">
         <dependency id="Verify" version="version" include="All" />
         <dependency id="xunit.abstractions" version="2.0.3" exclude="Build,Analyzers" />
         <dependency id="xunit.extensibility.execution" version="2.9.2" exclude="Build,Analyzers" />
+        <dependency id="Argon" version="0.21.0" exclude="Analyzers" />
+        <dependency id="DiffEngine" version="15.5.1" exclude="Analyzers" />
+        <dependency id="SimpleInfoName" version="2.3.0" exclude="Analyzers" />
+        <dependency id="System.IO.Hashing" version="8.0.0" exclude="Analyzers" />
       </group>
     </dependencies>
     <frameworkAssemblies>
