--- a/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
+++ b/src/Verify.TUnit.Tests/Verify.TUnit.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
 
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
