--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -30,14 +30,14 @@
     <PackageVersion Include="System.IO.Hashing" Version="9.0.0" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
     <PackageVersion Include="TextCopy" Version="6.2.1" />
-    <PackageVersion Include="TUnit" Version="0.4.105" />
-    <PackageVersion Include="TUnit.Core" Version="0.4.105" />
+    <PackageVersion Include="TUnit" Version="0.5.6" />
+    <PackageVersion Include="TUnit.Core" Version="0.5.6" />
     <PackageVersion Include="Xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.extensibility.execution" Version="2.9.2" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0-pre.49" />
-    <PackageVersion Include="xunit.v3" Version="0.7.0-pre.15" />
-    <PackageVersion Include="xunit.v3.extensibility.core" Version="0.7.0-pre.15" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0" />
+    <PackageVersion Include="xunit.v3" Version="1.0.0" />
+    <PackageVersion Include="xunit.v3.extensibility.core" Version="1.0.0" />
     <PackageVersion Include="YoloDev.Expecto.TestSdk" Version="0.14.3" />
   </ItemGroup>
 </Project>
