--- a/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
+++ b/usages/XunitV3NugetUsage/XunitV3NugetUsage.csproj
@@ -7,9 +7,9 @@
   <ItemGroup>
     <!-- begin-snippet: xunitv3-nugets -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="Verify.XunitV3" Version="28.5.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.49" PrivateAssets="all" />
-    <PackageReference Include="xunit.v3" Version="0.7.0-pre.15" />
+    <PackageReference Include="Verify.XunitV3" Version="28.6.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0" PrivateAssets="all" />
+    <PackageReference Include="xunit.v3" Version="1.0.0" />
     <!-- end-snippet -->
   </ItemGroup>
 </Project>
