--- a/src/Verify.Tests/Verify.Tests.csproj
+++ b/src/Verify.Tests/Verify.Tests.csproj
@@ -37,6 +37,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup Condition="$(TargetFramework) != 'net8.0'">
+    <Compile Remove="Wizard\WizardGen.cs" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
     <PackageReference Include="System.Drawing.Common" />
   </ItemGroup>
