--- a/src/Verify.XunitV3.DerivePaths.Tests/Verify.XunitV3.DerivePaths.Tests.csproj
+++ b/src/Verify.XunitV3.DerivePaths.Tests/Verify.XunitV3.DerivePaths.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <RootNamespace>Fake</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
