--- a/src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj
+++ b/src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj
@@ -7,6 +7,7 @@
     <RuntimeIdentifiers Condition=" '$(OS)' == 'Windows_NT' ">win-x64</RuntimeIdentifiers>
     <PlatformTarget>x64</PlatformTarget>
     <OutputType>Exe</OutputType>
+    <RootNamespace>Fake</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
