--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -46,6 +46,7 @@ build_script:
       dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
+      dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore --verbosity quiet
       if ($isWindows) {
         vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
         vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
