--- a/src/DanglingSnapshotsTests/DanglingSnapshotsTests.csproj
+++ b/src/DanglingSnapshotsTests/DanglingSnapshotsTests.csproj
@@ -12,6 +12,11 @@
     <ProjectReference Include="..\Verify.NUnit\Verify.NUnit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\Verify.NUnit\DanglingSnapshotsCheckCaller.cs">
+      <Link>DanglingSnapshotsCheckCaller.cs</Link>
+    </Compile>
+  </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
   <Import Project="$(ProjectDir)..\Verify.NUnit\buildTransitive\Verify.NUnit.props" />
