--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -26,6 +26,7 @@ before_build:
 build_script:
   - pwsh: |
       dotnet build src --configuration Release --verbosity quiet
+      dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore
       dotnet test src/DeterministicTests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/StaticSettingsTests --configuration Release --no-build --no-restore --verbosity quiet
@@ -46,7 +47,6 @@ build_script:
       dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
       dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore --verbosity quiet
       if ($isWindows) {
         vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
         vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
