--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -24,34 +24,34 @@ before_build:
       }
   - dotnet tool restore --tool-manifest src/.config/dotnet-tools.json
 build_script:
-  - pwsh: |
-      dotnet build src --configuration Release --verbosity quiet
-      dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore
-      dotnet test src/DeterministicTests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/StaticSettingsTests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/StrictJsonTests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.ClipboardAccept.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.ExceptionParsing.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Expecto.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.MSTest.SourceGenerator.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.NUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.NUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.XunitV3.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet run --project src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj --configuration Release --no-build --no-restore --verbosity quiet --framework net10.0
-      dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
-      if ($isWindows) {
-        vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
-        vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
-        vstest.console src/Verify.MSTest.Tests/bin/Release/net10.0/Verify.MSTest.Tests.dll /logger:Appveyor
-      }
+- dotnet build src --configuration Release --verbosity quiet
+- dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore
+- dotnet test src/DeterministicTests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/StaticSettingsTests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/StrictJsonTests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.ClipboardAccept.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.ExceptionParsing.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Expecto.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.MSTest.SourceGenerator.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.NUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.NUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.XunitV3.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet run --project src/Verify.XunitV3.Tests/Verify.XunitV3.Tests.csproj --configuration Release --no-build --no-restore --verbosity quiet --framework net10.0
+- dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity quiet
+- pwsh: |
+    if ($isWindows) {
+      vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
+      vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
+      vstest.console src/Verify.MSTest.Tests/bin/Release/net10.0/Verify.MSTest.Tests.dll /logger:Appveyor
+    }
 
 #- pwsh: |
 #    if ($isWindows) {
