--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -25,7 +25,6 @@ before_build:
   - dotnet tool restore --tool-manifest src/.config/dotnet-tools.json
 build_script:
 - dotnet build src/Verify.sln --configuration Release --verbosity minimal
-#- dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore
 - dotnet test src/DeterministicTests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/FSharpTests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/StaticSettingsTests --configuration Release --no-build --no-restore --verbosity minimal
@@ -46,6 +45,8 @@ build_script:
 - dotnet test src/Verify.XunitV3.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet build src/VerifyDangling.sln --configuration Release --verbosity minimal
+- dotnet test src/DanglingSnapshotsTests --configuration Release --no-build --no-restore
 - pwsh: |
     if ($isWindows) {
       vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
