--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -46,7 +46,7 @@ build_script:
 - dotnet test src/Verify.TUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.TUnit.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet build src/VerifyDangling.sln --configuration Release --verbosity minimal
-- dotnet test src/DanglingSnapshotsMSTestUsage --configuration Release --no-build --no-restore
+#- dotnet test src/DanglingSnapshotsMSTestUsage --configuration Release --no-build --no-restore
 - dotnet test src/DanglingSnapshotsNUnitUsage --configuration Release --no-build --no-restore
 - dotnet test src/DanglingSnapshotsXunitUsage --configuration Release --no-build --no-restore
 - dotnet test src/DanglingSnapshotsXunitV3Usage --configuration Release --no-build --no-restore
