--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -48,8 +48,8 @@ build_script:
 - dotnet build src/VerifyDangling.sln --configuration Release --verbosity minimal
 #- dotnet test src/DanglingSnapshotsMSTestUsage --configuration Release --no-build --no-restore
 #- dotnet test src/DanglingSnapshotsNUnitUsage --configuration Release --no-build --no-restore
-- dotnet test src/DanglingSnapshotsXunitUsage --configuration Release --no-build --no-restore
-- dotnet test src/DanglingSnapshotsXunitV3Usage --configuration Release --no-build --no-restore
+#- dotnet test src/DanglingSnapshotsXunitUsage --configuration Release --no-build --no-restore
+#- dotnet test src/DanglingSnapshotsXunitV3Usage --configuration Release --no-build --no-restore
 - pwsh: |
     if ($isWindows) {
       vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
