--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -23,13 +23,16 @@
     <PackageVersion Include="MSTest" Version="3.8.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.8.2" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.0.0" />
-    <PackageVersion Include="Polyfill" Version="7.21.0" />
+    <PackageVersion Include="Polyfill" Version="7.23.0" />
     <PackageVersion Include="ProjectDefaults" Version="1.0.149" />
     <PackageVersion Include="PublicApiGenerator" Version="11.4.5" />
     <PackageVersion Include="SimpleInfoName" Version="3.1.0" />
     <PackageVersion Include="System.Drawing.Common" Version="9.0.3" />
     <PackageVersion Include="System.IO.Hashing" Version="9.0.3" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
+    <PackageVersion Include="System.Memory" Version="4.6.2" />
+    <PackageVersion Include="System.Memory" Version="4.6.2" />
+    <PackageVersion Include="System.Memory" Version="4.6.2" />
     <PackageVersion Include="TextCopy" Version="6.2.1" />
     <PackageVersion Include="TUnit" Version="0.18.40" />
     <PackageVersion Include="TUnit.Core" Version="0.18.40" />
