--- a/src/DeterministicTests/Directory.Build.props
+++ b/src/DeterministicTests/Directory.Build.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
-    <NoWarn>CS1591;CS0649</NoWarn>
+    <NoWarn>CS1591;CS0649;NU1608;NU1109</NoWarn>
     <Deterministic>true</Deterministic>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
