--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@ src/Verify/EmptyFiles/* binary
 *.verified.json text eol=lf working-tree-encoding=UTF-8
 *.verified.props text eol=lf working-tree-encoding=UTF-8
 *.verified.nuspec text eol=lf working-tree-encoding=UTF-8
+*.verified.bin binary
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
 *.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
