Support for X# Language

--- a/src/Verify.Xunit/buildTransitive/Verify.Xunit.props
+++ b/src/Verify.Xunit/buildTransitive/Verify.Xunit.props
@@ -6,10 +6,11 @@
     <Using Include="VerifyXunit.Verifier" Static="True" />
   </ItemGroup>
   <PropertyGroup>
-    <VerifyXunitAttributesFile>VerifyXunit.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyXunitAttributesFile>
+    <VerifyXunitAttributesFile Condition="$(Language) != 'X#'">VerifyXunit.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyXunitAttributesFile>
+    <VerifyXunitAttributesFile Condition="$(Language) == 'X#'">VerifyXunit.Attributes.prg</VerifyXunitAttributesFile>
   </PropertyGroup>
   <Target Name="WriteVerifyXunitAttributes"
-          Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#'"
+          Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#' or $(Language) == 'X#'"
           BeforeTargets="BeforeCompile;CoreCompile"
           Inputs="$(MSBuildAllProjects)"
           Outputs="$(IntermediateOutputPath)$(VerifyXunitAttributesFile)">
