--- a/src/Verify/buildTransitive/Verify.props
+++ b/src/Verify/buildTransitive/Verify.props
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <Deterministic>false</Deterministic>
     <DeterministicSourcePaths>false</DeterministicSourcePaths>
-    <VerifyAttributesFile>Verify.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyAttributesFile>
+	  <VerifyAttributesFile Condition="$(Language) != 'X#'">Verify.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyAttributesFile>
+	  <VerifyAttributesFile Condition="$(Language) == 'X#'">Verify.Attributes.prg</VerifyAttributesFile>
     <NoWarn>$(NoWarn);CA2255</NoWarn>
   </PropertyGroup>
   <Target Name="WriteVerifyAttributes"
-          Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#'"
+          Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#' or $(Language) == 'X#'"
           BeforeTargets="BeforeCompile;CoreCompile"
           Inputs="$(MSBuildAllProjects)"
           Outputs="$(IntermediateOutputPath)$(VerifyAttributesFile)">
