Generate sbom in nugets

--- a/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
+++ b/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>$(TargetFrameworks);net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
   </ItemGroup>
