--- a/src/Verify.ClipboardAccept/Verify.ClipboardAccept.csproj
+++ b/src/Verify.ClipboardAccept/Verify.ClipboardAccept.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DiffEngine" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="TextCopy" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
