--- a/src/Verify.Expecto/Verify.Expecto.csproj
+++ b/src/Verify.Expecto/Verify.Expecto.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Expecto" />
     <PackageReference Include="FSharp.Core" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
     <None Include="buildTransitive\Verify.Expecto.props" Pack="true" PackagePath="buildTransitive\" />
