--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -5,6 +5,7 @@
     <RoslynVersion>4.4</RoslynVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="MSTest.TestFramework" />
     <ProjectReference Include="..\Verify\Verify.csproj" PrivateAssets="None" />
