--- a/src/Verify.TUnit/Verify.TUnit.csproj
+++ b/src/Verify.TUnit/Verify.TUnit.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="TUnit.Core" />
 
