--- a/src/Verify.Xunit/Verify.Xunit.csproj
+++ b/src/Verify.Xunit/Verify.Xunit.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="xunit.abstractions" />
     <PackageReference Include="xunit.extensibility.execution" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
