--- a/src/Verify.XunitV3/Verify.XunitV3.csproj
+++ b/src/Verify.XunitV3/Verify.XunitV3.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="xunit.v3.extensibility.core" />
 
