--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -34,6 +34,8 @@ build_script:
 - dotnet test src/Verify.Expecto.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Expecto.FSharpTests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.Expecto.Tests --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet test src/Verify.MSTest.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
+- dotnet test src/Verify.MSTest.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.MSTest.SourceGenerator.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.MSTest.DisableAttachments.Tests --configuration Release --no-build --no-restore --verbosity minimal
 - dotnet test src/Verify.NUnit.DerivePaths.Tests --configuration Release --no-build --no-restore --verbosity minimal
@@ -53,12 +55,7 @@ build_script:
 #- dotnet test src/DanglingSnapshotsNUnitUsage --configuration Release --no-build --no-restore
 #- dotnet test src/DanglingSnapshotsXunitUsage --configuration Release --no-build --no-restore
 #- dotnet test src/DanglingSnapshotsXunitV3Usage --configuration Release --no-build --no-restore
-- pwsh: |
-    if ($isWindows) {
-      vstest.console src/Verify.MSTest.DerivePaths.Tests/bin/Release/net10.0/Verify.MSTest.DerivePaths.Tests.dll /logger:Appveyor
-      vstest.console src/Verify.MSTest.Tests/bin/Release/net48/Verify.MSTest.Tests.dll /logger:Appveyor
-      vstest.console src/Verify.MSTest.Tests/bin/Release/net10.0/Verify.MSTest.Tests.dll /logger:Appveyor
-    }
+
 
 #- pwsh: |
 #    if ($isWindows) {
