#1478: Allow Overriding of DependentUpon by moving from .targets to .props (#1481)
* move specifying of DependentUpon to props file. Also, change form `None Update` to `None Include`, because now the item group is defined before the default includes of .net sdk. So there's nothing to update, yet.

* remove Verify.targets because it's now empty

* move inclusion of **received** and **verified** files to Verify.AfterMicrosoftNetSdk.props, which is imported after MicrosoftNetSdk default globbing item groups.

--- a/src/Verify/buildTransitive/Verify.props
+++ b/src/Verify/buildTransitive/Verify.props
@@ -6,6 +6,7 @@
     <VerifyAttributesFile Condition="$(Language) != 'X#'">Verify.Attributes$(MSBuildProjectExtension.Replace('proj', ''))</VerifyAttributesFile>
     <VerifyAttributesFile Condition="$(Language) == 'X#'">Verify.Attributes.prg</VerifyAttributesFile>
     <NoWarn>$(NoWarn);CA2255</NoWarn>
+    <AfterMicrosoftNetSdkProps>$(AfterMicrosoftNetSdkProps);$(MSBuildThisFileDirectory)Verify.AfterMicrosoftNetSdk.props</AfterMicrosoftNetSdkProps>
   </PropertyGroup>
   <Target Name="WriteVerifyAttributes"
           Condition="$(Language) == 'VB' or $(Language) == 'C#' or $(Language) == 'F#' or $(Language) == 'X#'"
