--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -14,9 +14,9 @@
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
 
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\" />
-    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="buildTransitive\" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\" />
-    <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="build\" />
+    <None Include="buildTransitive\Verify.AfterMicrosoftNetSdk.props" Pack="true" PackagePath="buildTransitive\" />
+    <None Include="buildTransitive\Verify.AfterMicrosoftNetSdk.props" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
