--- a/src/Verify.MSTest.DerivePaths.Tests/Verify.MSTest.DerivePaths.Tests.csproj
+++ b/src/Verify.MSTest.DerivePaths.Tests/Verify.MSTest.DerivePaths.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
