--- a/src/Verify.MSTest.Tests/Verify.MSTest.Tests.csproj
+++ b/src/Verify.MSTest.Tests/Verify.MSTest.Tests.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <PlatformTarget>x64</PlatformTarget>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
