Revert "Update Directory.Packages.props"
This reverts commit f509dfa39151b2ef86e24e649dbe7ce7042c3d49.

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -20,6 +20,7 @@
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="NUnit" Version="4.4.0" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="5.1.0" />
     <PackageVersion Include="MSTest" Version="3.10.2" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.10.2" />
     <PackageVersion Include="Polyfill" Version="9.0.0-beta.15" />
