--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ src/Verify/EmptyFiles/* binary
 *.verified.json text eol=lf working-tree-encoding=UTF-8
 *.verified.props text eol=lf working-tree-encoding=UTF-8
 *.verified.nuspec text eol=lf working-tree-encoding=UTF-8
+*.verified.reentrant text eol=lf working-tree-encoding=UTF-8
 *.verified.bin binary
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
