refs and cleanup

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,5 +21,6 @@ src/Verify/EmptyFiles/* binary
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
 *.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+*.slnx.DotSettings text eol=lf working-tree-encoding=UTF-8
 
 *NonStandardEncoding* binary
